[workspace.package]
version = "2.2.0"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/anza-xyz/agave"
homepage = "https://anza.xyz/"
license = "Apache-2.0"
edition = "2021"

[workspace]
members = [
    "crates/builtins-default-costs",
    "crates/compute-budget-instruction",
    "crates/curves/curve25519",
    "crates/log-collector",
    "crates/poseidon",
    "crates/program-runtime",
    "crates/svm-rent-collector",
    "crates/svm-transaction",
    "crates/type-overrides",
    "crates/programs/bpf_loader",
    "crates/programs/loader-v4",
    "crates/sdk/account",
    "crates/sdk/account-info",
    "crates/sdk/address-lookup-table-interface",
    "crates/sdk/atomic-u64",
    "crates/sdk/big-mod-exp",
    "crates/sdk/bincode",
    "crates/sdk/blake3-hasher",
    "crates/sdk/bn254",
    "crates/sdk/borsh",
    "crates/sdk/client-traits",
    "crates/sdk/clock",
    "crates/sdk/cluster-type",
    "crates/sdk/commitment-config",
    "crates/sdk/compute-budget-interface",
    "crates/sdk/cpi",
    "crates/sdk/decode-error",
    "crates/sdk/define-syscall",
    "crates/sdk/derivation-path",
    "crates/sdk/ed25519-program",
    "crates/sdk/epoch-info",
    "crates/sdk/epoch-rewards",
    "crates/sdk/epoch-rewards-hasher",
    "crates/sdk/epoch-schedule",
    "crates/sdk/example-mocks",
    "crates/sdk/feature-gate-interface",
    "crates/sdk/feature-set",
    "crates/sdk/fee-calculator",
    "crates/sdk/fee-structure",
    "crates/sdk/frozen-abi",
    "crates/sdk/frozen-abi/macro",
    "crates/sdk/genesis-config",
    "crates/sdk/hard-forks",
    "crates/sdk/hash",
    "crates/sdk/inflation",
    "crates/sdk/instruction",
    "crates/sdk/instructions-sysvar",
    "crates/sdk/keccak-hasher",
    "crates/sdk/keypair",
    "crates/sdk/last-restart-slot",
    "crates/sdk/loader-v2-interface",
    "crates/sdk/loader-v3-interface",
    "crates/sdk/loader-v4-interface",
    "crates/sdk/logger",
    "crates/sdk/macro",
    "crates/sdk/message",
    "crates/sdk/msg",
    "crates/sdk/native-token",
    "crates/sdk/nonce",
    "crates/sdk/nonce-account",
    "crates/sdk/offchain-message",
    "crates/sdk/packet",
    "crates/sdk/poh-config",
    "crates/sdk/precompile-error",
    "crates/sdk/precompiles",
    "crates/sdk/presigner",
    "crates/sdk/program",
    "crates/sdk/program-entrypoint",
    "crates/sdk/program-error",
    "crates/sdk/program-memory",
    "crates/sdk/program-option",
    "crates/sdk/program-pack",
    "crates/sdk/pubkey",
    "crates/sdk/quic-definitions",
    "crates/sdk/rent",
    "crates/sdk/rent-collector",
    "crates/sdk/rent-debits",
    "crates/sdk/reserved-account-keys",
    "crates/sdk/reward-info",
    "crates/sdk/sanitize",
    "crates/sdk/sdk",
    "crates/sdk/sdk-ids",
    "crates/sdk/secp256k1-program",
    "crates/sdk/secp256k1-recover",
    "crates/sdk/secp256r1-program",
    "crates/sdk/seed-derivable",
    "crates/sdk/seed-phrase",
    "crates/sdk/serde",
    "crates/sdk/serde-varint",
    "crates/sdk/serialize-utils",
    "crates/sdk/sha256-hasher",
    "crates/sdk/short-vec",
    "crates/sdk/shred-version",
    "crates/sdk/signature",
    "crates/sdk/signer",
    "crates/sdk/slot-hashes",
    "crates/sdk/slot-history",
    "crates/sdk/stable-layout",
    "crates/sdk/system-transaction",
    "crates/sdk/sysvar",
    "crates/sdk/sysvar-id",
    "crates/sdk/time-utils",
    "crates/sdk/transaction",
    "crates/sdk/transaction-context",
    "crates/sdk/transaction-error",
    "crates/sdk/validator-exit",
    "crates/sdk/vote-interface",]

[workspace.dependencies]
ahash = "0.8.11"
arbitrary = "1.4.1"
ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-serialize = "0.4.0"
base64 = "0.22.1"
bincode = "1.3.3"
bitflags = { version = "2.8.0" }
blake3 = "1.5.5"
borsh = { version = "1.5.5", features = ["derive", "unstable__schema"] }
borsh0-10 = { package = "borsh", version = "0.10.3" }
bs58 = { version = "0.5.1", default-features = false }
bv = "0.11.1"
bytemuck = "1.21.0"
bytemuck_derive = "1.8.1"
cfg_eval = "0.1.2"
chrono = { version = "0.4.39", default-features = false }
console_error_panic_hook = "0.1.7"
console_log = "0.2.2"
curve25519-dalek = { version = "4.1.3", features = ["digest", "rand_core"] }
derivation-path = { version = "0.2.0", default-features = false }
digest = "0.10.7"
eager = "0.1.0"
ed25519-dalek-bip32 = "0.2.0"
ed25519-dalek = "=1.0.1"
enum-iterator = "1.5.0"
env_logger = "0.9.3"
five8_const = "0.1.3"
futures = "0.3.31"
gethostname = "0.2.3"
getrandom = "0.2.10"
hmac = "0.12.1"
itertools = "0.12.1"
im = "15.1.0"
js-sys = "0.3.77"
lazy_static = "1.5.0"
libsecp256k1 = { version = "0.6.0", default-features = false, features = [
    "std",
    "static-context",
] }
light-poseidon = "0.2.0"
log = "0.4.25"
memmap2 = "0.5.10"
memoffset = "0.9"
num-bigint = "0.4.6"
num-derive = "0.4"
num_enum = "0.7.3"
num-traits = "0.2"
openssl = "0.10"
parking_lot = "0.12"
pbkdf2 = { version = "0.11.0", default-features = false }
percentage = "0.1.0"
proc-macro2 = "1.0.93"
qstring = "0.7.2"
qualifier_attr = { version = "0.2.2", default-features = false }
quote = "1.0"
rand = "0.8.5"
rand0-7 = { package = "rand", version = "0.7" }
reqwest = { version = "0.11.27", default-features = false }
scopeguard = "1.2.0"
serde = "1.0.217" # must match the serde_derive version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde-big-array = "0.5.1"
serde_bytes = "0.11.15"
serde_derive = "1.0.217" # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde_json = "1.0.138"
serde_with = { version = "3.12.0", default-features = false }
sha2 = "0.10.8"
sha3 = "0.10.8"
shuttle = "0.7.1"
siphasher = "0.3.11"
solana-account = { path = "crates/sdk/account", version = "=2.2.0" }
solana-account-info = { path = "crates/sdk/account-info", version = "=2.2.0" }
solana-address-lookup-table-interface = { path = "crates/sdk/address-lookup-table-interface", version = "=2.2.0" }
solana-atomic-u64 = { path = "crates/sdk/atomic-u64", version = "=2.2.0" }
solana-big-mod-exp = { path = "crates/sdk/big-mod-exp", version = "=2.2.0" }
solana-bincode = { path = "crates/sdk/bincode", version = "=2.2.0" }
solana-blake3-hasher = { path = "crates/sdk/blake3-hasher", version = "=2.2.0" }
solana-bn254 = { path = "crates/sdk/bn254", version = "=2.2.0" }
solana-borsh = { path = "crates/sdk/borsh", version = "=2.2.0" }
solana-bpf-loader-program = { path = "crates/programs/bpf_loader", version = "=2.2.0" }
solana-builtins-default-costs = { path = "crates/builtins-default-costs", version = "=2.2.0" }
solana-client-traits = { path = "crates/sdk/client-traits", version = "=2.2.0" }
solana-clock = { path = "crates/sdk/clock", version = "=2.2.0" }
solana-cluster-type = { path = "crates/sdk/cluster-type", version = "=2.2.0" }
solana-commitment-config = { path = "crates/sdk/commitment-config", version = "=2.2.0" }
solana-compute-budget = { path = "crates/compute-budget", version = "=2.2.0" }
solana-compute-budget-instruction = { path = "crates/compute-budget-instruction", version = "=2.2.0" }
solana-compute-budget-interface = { path = "crates/sdk/compute-budget-interface", version = "=2.2.0" }
solana-cpi = { path = "crates/sdk/cpi", version = "=2.2.0" }
solana-curve25519 = { path = "crates/curves/curve25519", version = "=2.2.0" }
solana-decode-error = { path = "crates/sdk/decode-error", version = "=2.2.0" }
solana-define-syscall = { path = "crates/sdk/define-syscall", version = "=2.2.0" }
solana-derivation-path = { path = "crates/sdk/derivation-path", version = "=2.2.0" }
solana-ed25519-program = { path = "crates/sdk/ed25519-program", version = "=2.2.0" }
solana-epoch-info = { path = "crates/sdk/epoch-info", version = "=2.2.0" }
solana-epoch-rewards = { path = "crates/sdk/epoch-rewards", version = "=2.2.0" }
solana-epoch-rewards-hasher = { path = "crates/sdk/epoch-rewards-hasher", version = "=2.2.0" }
solana-epoch-schedule = { path = "crates/sdk/epoch-schedule", version = "=2.2.0" }
solana-example-mocks = { path = "crates/sdk/example-mocks", version = "=2.2.0" }
solana-feature-gate-interface = { path = "crates/sdk/feature-gate-interface", version = "=2.2.0" }
solana-feature-set = { path = "crates/sdk/feature-set", version = "=2.2.0" }
solana-fee-calculator = { path = "crates/sdk/fee-calculator", version = "=2.2.0" }
solana-fee-structure = { path = "crates/sdk/fee-structure", version = "=2.2.0" }
solana-frozen-abi = { path = "crates/sdk/frozen-abi", version = "=2.2.0" }
solana-frozen-abi-macro = { path = "crates/sdk/frozen-abi/macro", version = "=2.2.0" }
solana-genesis-config = { path = "crates/sdk/genesis-config", version = "=2.2.0" }
solana-hard-forks = { path = "crates/sdk/hard-forks", version = "=2.2.0" }
solana-hash = { path = "crates/sdk/hash", version = "=2.2.0" }
solana-inflation = { path = "crates/sdk/inflation", version = "=2.2.0" }
solana-instruction = { path = "crates/sdk/instruction", version = "=2.2.0" }
solana-instructions-sysvar = { path = "crates/sdk/instructions-sysvar", version = "=2.2.0" }
solana-keccak-hasher = { path = "crates/sdk/keccak-hasher", version = "=2.2.0" }
solana-keypair = { path = "crates/sdk/keypair", version = "=2.2.0" }
solana-last-restart-slot = { path = "crates/sdk/last-restart-slot", version = "=2.2.0" }
solana-loader-v2-interface = { path = "crates/sdk/loader-v2-interface", version = "=2.2.0" }
solana-loader-v3-interface = { path = "crates/sdk/loader-v3-interface", version = "=2.2.0" }
solana-loader-v4-interface = { path = "crates/sdk/loader-v4-interface", version = "=2.2.0" }
solana-loader-v4-program = { path = "crates/programs/loader-v4", version = "=2.2.0" }
solana-log-collector = { path = "crates/log-collector", version = "=2.2.0" }
solana-logger = { path = "crates/sdk/logger", version = "=2.2.0" }
solana-message = { path = "crates/sdk/message", version = "=2.2.0" }
solana-msg = { path = "crates/sdk/msg", version = "=2.2.0" }
solana-native-token = { path = "crates/sdk/native-token", version = "=2.2.0" }
solana-nonce = { path = "crates/sdk/nonce", version = "=2.2.0" }
solana-nonce-account = { path = "crates/sdk/nonce-account", version = "=2.2.0" }
solana-offchain-message = { path = "crates/sdk/offchain-message", version = "=2.2.0" }
solana-packet = { path = "crates/sdk/packet", version = "=2.2.0" }
solana-poh-config = { path = "crates/sdk/poh-config", version = "=2.2.0" }
solana-poseidon = { path = "crates/poseidon", version = "=2.2.0" }
solana-precompile-error = { path = "crates/sdk/precompile-error", version = "=2.2.0" }
solana-precompiles = { path = "crates/sdk/precompiles", version = "=2.2.0" }
solana-presigner = { path = "crates/sdk/presigner", version = "=2.2.0" }
solana-program = { path = "crates/sdk/program", version = "=2.2.0" }
solana-program-entrypoint = { path = "crates/sdk/program-entrypoint", version = "=2.2.0" }
solana-program-error = { path = "crates/sdk/program-error", version = "=2.2.0" }
solana-program-memory = { path = "crates/sdk/program-memory", version = "=2.2.0" }
solana-program-option = { path = "crates/sdk/program-option", version = "=2.2.0" }
solana-program-pack = { path = "crates/sdk/program-pack", version = "=2.2.0" }
solana-program-runtime = { path = "crates/program-runtime", version = "=2.2.0" }
solana-pubkey = { path = "crates/sdk/pubkey", version = "=2.2.0" }
solana-quic-definitions = { path = "crates/sdk/quic-definitions", version = "=2.2.0" }
solana-rent = { path = "crates/sdk/rent", version = "=2.2.0" }
solana-rent-collector = { path = "crates/sdk/rent-collector", version = "=2.2.0" }
solana-rent-debits = { path = "crates/sdk/rent-debits", version = "=2.2.0" }
solana-reserved-account-keys = { path = "crates/sdk/reserved-account-keys", version = "=2.2.0" }
solana-reward-info = { path = "crates/sdk/reward-info", version = "=2.2.0" }
solana-sanitize = { path = "crates/sdk/sanitize", version = "=2.2.0" }
solana-sbpf = "=0.10.0"
solana-sdk = { path = "crates/sdk/sdk", version = "=2.2.0" }
solana-sdk-ids = { path = "crates/sdk/sdk-ids", version = "=2.2.0" }
solana-sdk-macro = { path = "crates/sdk/macro", version = "=2.2.0" }
solana-secp256k1-program = { path = "crates/sdk/secp256k1-program", version = "=2.2.0" }
solana-secp256k1-recover = { path = "crates/sdk/secp256k1-recover", version = "=2.2.0" }
solana-secp256r1-program = { path = "crates/sdk/secp256r1-program", version = "=2.2.0" }
solana-seed-derivable = { path = "crates/sdk/seed-derivable", version = "=2.2.0" }
solana-seed-phrase = { path = "crates/sdk/seed-phrase", version = "=2.2.0" }
solana-serde = { path = "crates/sdk/serde", version = "=2.2.0" }
solana-serde-varint = { path = "crates/sdk/serde-varint", version = "=2.2.0" }
solana-serialize-utils = { path = "crates/sdk/serialize-utils", version = "=2.2.0" }
solana-sha256-hasher = { path = "crates/sdk/sha256-hasher", version = "=2.2.0" }
solana-short-vec = { path = "crates/sdk/short-vec", version = "=2.2.0" }
solana-shred-version = { path = "crates/sdk/shred-version", version = "=2.2.0" }
solana-signature = { path = "crates/sdk/signature", version = "=2.2.0" }
solana-signer = { path = "crates/sdk/signer", version = "=2.2.0" }
solana-slot-hashes = { path = "crates/sdk/slot-hashes", version = "=2.2.0" }
solana-slot-history = { path = "crates/sdk/slot-history", version = "=2.2.0" }
solana-stable-layout = { path = "crates/sdk/stable-layout", version = "=2.2.0" }
solana-stake-interface = { version = "1.2.1" }
solana-svm-rent-collector = { path = "crates/svm-rent-collector", version = "=2.2.0" }
solana-svm-transaction = { path = "crates/svm-transaction", version = "=2.2.0" }
solana-system-interface = "1.0"
solana-system-transaction = { path = "crates/sdk/system-transaction", version = "=2.2.0" }
solana-sysvar = { path = "crates/sdk/sysvar", version = "=2.2.0" }
solana-sysvar-id = { path = "crates/sdk/sysvar-id", version = "=2.2.0" }
solana-time-utils = { path = "crates/sdk/time-utils", version = "=2.2.0" }
solana-transaction = { path = "crates/sdk/transaction", version = "=2.2.0" }
solana-transaction-context = { path = "crates/sdk/transaction-context", version = "=2.2.0" }
solana-transaction-error = { path = "crates/sdk/transaction-error", version = "=2.2.0" }
solana-type-overrides = { path = "crates/type-overrides", version = "=2.2.0" }
solana-validator-exit = { path = "crates/sdk/validator-exit", version = "=2.2.0" }
solana-vote-interface = { path = "crates/sdk/vote-interface", version = "=2.2.0" }
subtle = "2.6.1"
syn = "2.0"
thiserror = "2.0.11"
uriparse = "0.6.4"
wasm-bindgen = "0.2"

[package]
name = "solana-svm"
description = "Solana SVM"
documentation = "https://docs.rs/solana-svm"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }


[dependencies]
ahash = { workspace = true }
log = { workspace = true }
percentage = { workspace = true }
qualifier_attr = { workspace = true, optional = true }
serde = { workspace = true, features = ["rc"] }
serde_derive = { workspace = true }
solana-account = { workspace = true }
solana-bpf-loader-program = { workspace = true }
solana-clock = { workspace = true }
solana-compute-budget = { workspace = true }
solana-compute-budget-instruction = { workspace = true }
solana-feature-set = { workspace = true }
solana-fee-structure = { workspace = true }
solana-frozen-abi = { workspace = true, optional = true, features = [
    "frozen-abi",
] }
solana-frozen-abi-macro = { workspace = true, optional = true, features = [
    "frozen-abi",
] }
solana-hash = { workspace = true }
solana-instruction = { workspace = true, features = ["std"] }
solana-instructions-sysvar = { workspace = true }
solana-loader-v4-program = { workspace = true }
solana-log-collector = { workspace = true }
solana-message = { workspace = true }
solana-nonce = { workspace = true }
solana-nonce-account = { workspace = true }
solana-precompiles = { workspace = true }
solana-program = { workspace = true, default-features = false }
solana-program-runtime = { workspace = true, features = ["metrics"] }
solana-pubkey = { workspace = true }
solana-rent = { workspace = true }
solana-rent-debits = { workspace = true }
solana-sdk = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-svm-rent-collector = { workspace = true }
solana-svm-transaction = { workspace = true }
solana-transaction-context = { workspace = true }
solana-transaction-error = { workspace = true }
solana-type-overrides = { workspace = true }
thiserror = { workspace = true }

[lib]
crate-type = ["lib"]
name = "solana_svm"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
dev-context-only-utils = ["dep:qualifier_attr"]
frozen-abi = [
    "dep:solana-frozen-abi",
    "dep:solana-frozen-abi-macro",
    "solana-compute-budget/frozen-abi",
    "solana-program-runtime/frozen-abi",
    "solana-sdk/frozen-abi",
]

[patch.crates-io]

# We include the following crates as our dependencies above from crates.io:
#
#  * spl-associated-token-account
#  * spl-instruction-padding
#  * spl-memo
#  * spl-pod
#  * spl-token
#  * spl-token-2022
#  * spl-token-metadata-interface
#
# They, in turn, depend on a number of crates that we also include directly
# using `path` specifications.  For example, `spl-token` depends on
# `solana-program`.  And we explicitly specify `solana-program` above as a local
# path dependency:
#
#     solana-program = { path = "../../sdk/program", version = "=1.16.0" }
#
# Unfortunately, Cargo will try to resolve the `spl-token` `solana-program`
# dependency only using what is available on crates.io.  Crates.io normally
# contains a previous version of these crates, and we end up with two versions
# of `solana-program` and `solana-zk-token-sdk` and all of their dependencies in
# our build tree.
#
# If you are developing downstream using non-crates-io solana-program (local or
# forked repo, or from github rev, eg), duplicate the following patch statements
# in your Cargo.toml. If you still hit duplicate-type errors with the patch
# statements in place, run `cargo update -p solana-program` and/or `cargo update
# -p solana-zk-token-sdk` to remove extraneous versions from your Cargo.lock
# file.
#
# There is a similar override in `programs/sbf/Cargo.toml`.  Please keep both
# comments and the overrides in sync.
solana-clock = { path = "crates/sdk/clock" }
solana-curve25519 = { path = "crates/curves/curve25519" }
solana-account-info = { path = "crates/sdk/account-info" }
solana-borsh = { path = "crates/sdk/borsh" }
solana-cpi = { path = "crates/sdk/cpi" }
solana-decode-error = { path = "crates/sdk/decode-error" }
solana-frozen-abi = { path = "crates/sdk/frozen-abi" }
solana-frozen-abi-macro = { path = "crates/sdk/frozen-abi/macro" }
solana-hash = { path = "crates/sdk/hash" }
solana-instruction = { path = "crates/sdk/instruction" }
solana-msg = { path = "crates/sdk/msg" }
solana-program = { path = "crates/sdk/program" }
solana-program-entrypoint = { path = "crates/sdk/program-entrypoint" }
solana-program-error = { path = "crates/sdk/program-error" }
solana-program-option = { path = "crates/sdk/program-option" }
solana-program-pack = { path = "crates/sdk/program-pack" }
solana-pubkey = { path = "crates/sdk/pubkey" }
solana-sha256-hasher = { path = "crates/sdk/sha256-hasher" }
solana-sysvar-id = { path = "crates/sdk/sysvar-id" }


# curve25519-dalek uses the simd backend by default in v4 if possible,
# which has very slow performance on some platforms with opt-level 0,
# which is the default for dev and test builds.
# This slowdown causes certain interactions in the solana-test-validator,
# such as verifying ZK proofs in transactions, to take much more than 400ms,
# creating problems in the testing environment.
# To enable better performance in solana-test-validator during tests and dev builds,
# we override the opt-level to 3 for the crate.
[profile.dev.package.curve25519-dalek]
opt-level = 3

[lints]
workspace = true
