[package]
name = "solana-builtins-default-costs"
description = "Solana builtins default costs"
documentation = "https://docs.rs/solana-builtins-default-costs"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
ahash = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
qualifier_attr = { workspace = true }
solana-feature-set = { workspace = true }
solana-frozen-abi = { workspace = true, optional = true, features = [
    "frozen-abi",
] }
solana-pubkey = { workspace = true }
solana-sdk-ids = { workspace = true }

[lib]
crate-type = ["lib"]
name = "solana_builtins_default_costs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
frozen-abi = [
    "dep:solana-frozen-abi",
]
dev-context-only-utils = []
svm-internal = []

[lints]
workspace = true
