[package]
name = "solana-system-interface"
version = "1.0.0"
description = "Instructions and constructors for the System program"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
num-traits = { workspace = true }
serde = { workspace = true, optional = true }
serde_derive = { workspace = true, optional = true }
solana-decode-error = { workspace = true }
solana-frozen-abi = { workspace = true, features = ["frozen-abi"], optional = true }
solana-frozen-abi-macro = { workspace = true, features = ["frozen-abi"], optional = true }
solana-instruction = { workspace = true, features = ["bincode", "std"], optional = true }
solana-logger = { workspace = true, optional = true }
solana-pubkey = { workspace = true, default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }

[features]
bincode = ["dep:solana-instruction", "serde"]
frozen-abi = [
    "dep:solana-frozen-abi",
    "dep:solana-frozen-abi-macro",
    "dep:solana-logger",
    "solana-pubkey/frozen-abi",
    "solana-pubkey/std"
]
serde = ["dep:serde", "dep:serde_derive", "solana-pubkey/serde"]

[lib]
crate-type = ["cdylib", "rlib"]