[package]
name = "solana-stake-program"
description = "Solana Stake program"
documentation = "https://docs.rs/solana-stake-program"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
log = { workspace = true }
solana-account = { workspace = true }
solana-bincode = { workspace = true }
solana-clock = { workspace = true }
solana-config-program = { workspace = true }
solana-feature-set = { workspace = true }
solana-genesis-config = { workspace = true }
solana-instruction = { workspace = true }
solana-log-collector = { workspace = true }
solana-native-token = { workspace = true }
solana-packet = { workspace = true }
solana-program-runtime = { workspace = true }
solana-pubkey = { workspace = true, features = ["sha2"] }
solana-rent = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-stake-interface = { workspace = true }
solana-sysvar = { workspace = true }
solana-transaction-context = { workspace = true, features = ["bincode"] }
solana-type-overrides = { workspace = true }
solana-vote-interface = { workspace = true, features = ["bincode"] }

[lib]
crate-type = ["lib"]
name = "solana_stake_program"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true
