[package]
name = "solana-system-program"
description = "Solana System program"
documentation = "https://docs.rs/solana-system-program"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
solana-account = { workspace = true }
solana-bincode = { workspace = true }
solana-instruction = { workspace = true }
solana-log-collector = { workspace = true }
solana-nonce = { workspace = true, features = ["serde"] }
solana-nonce-account = { workspace = true }
solana-packet = { workspace = true }
solana-program-runtime = { workspace = true }
solana-pubkey = { workspace = true, features = ["sha2"] }
solana-sdk-ids = { workspace = true }
solana-system-interface = { workspace = true, features = ["serde"] }
solana-sysvar = { workspace = true }
solana-transaction-context = { workspace = true, features = ["bincode"] }
solana-type-overrides = { workspace = true }

[lib]
crate-type = ["lib"]
name = "solana_system_program"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
